--- a/package.json
+++ b/package.json
@@ -12,20 +12,26 @@
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "css:build": "tailwindcss -i ./src/index.css -o ./dist/output.css --minify"
+    "css:build": "tailwindcss -i ./src/styles/index.css -o ./dist/output.css --minify"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.3",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/vite": "^4.1.14",
+    "@tanstack/eslint-plugin-query": "^5.91.1",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
